--- a/src/complex/register/index.css
+++ b/src/complex/register/index.css
@@ -32,7 +32,7 @@ input {
 
 .bg {
   width: 100%;
-  height: 500px;
+  height: 580px;
   background: url("@/assets/bg.png") no-repeat;
   background-size: cover;
   border-radius: 12px;
@@ -75,4 +75,17 @@ input {
   position: absolute;
   bottom: 2%;
   right: 5%;
+}
+
+.code {
+  color: #467bf8;
+}
+
+.codeBtn {
+  background-color: #000;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 12px;
+  width: 100px;
 }
